--- a/ex-eureka-server/pom.xml
+++ b/ex-eureka-server/pom.xml
@@ -24,6 +24,10 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
 		</dependency>
@@ -44,7 +48,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -53,5 +56,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
