--- a/ex-worker/src/main/resources/application.properties
+++ b/ex-worker/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.application.name=ex-worker
+spring.application.name=hr-worker
 server.port=8082
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -8,7 +10,3 @@ spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-spring.jpa.hibernate.ddl-auto=update
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
