--- a/ex-gateway/src/main/resources/application.properties
+++ b/ex-gateway/src/main/resources/application.properties
@@ -3,11 +3,18 @@ server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
 zuul.routes.worker.service-id=ex-worker
 zuul.routes.worker.path=/ex-worker/**
 
 zuul.routes.payroll.service-id=ex-user
 zuul.routes.payroll.path=/ex-user/**
+
+zuul.routes.kafkaproducer.service-id=ex-kafka-producer
+zuul.routes.kafkaproducer.path=/ex-kafka-producer/**
 
 #zuul.routes.oauth.service-id=hr-oauth
 #zuul.routes.oauth.path=/hr-oauth/**
