--- a/ex-gateway/src/main/resources/application.properties
+++ b/ex-gateway/src/main/resources/application.properties
@@ -19,3 +19,6 @@ zuul.routes.kafkaproducer.path=/ex-kafka-producer/**
 #zuul.routes.oauth.service-id=hr-oauth
 #zuul.routes.oauth.path=/hr-oauth/**
 #zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
+
+zuul.routes.budget.service-id=ex-budget
+zuul.routes.budget.path=/ex-budget/**
