--- a/ex-gateway/src/main/resources/application.properties
+++ b/ex-gateway/src/main/resources/application.properties
@@ -16,8 +16,8 @@ zuul.routes.payroll.path=/ex-user/**
 zuul.routes.kafkaproducer.service-id=ex-kafka-producer
 zuul.routes.kafkaproducer.path=/ex-kafka-producer/**
 
-#zuul.routes.oauth.service-id=hr-oauth
-#zuul.routes.oauth.path=/hr-oauth/**
+zuul.routes.oauth.service-id=ex-oauth
+zuul.routes.oauth.path=/ex-oauth/**
 #zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
 
 zuul.routes.budget.service-id=ex-budget
