Configuration of Oauth

--- a/ex-gateway/src/main/resources/application.properties
+++ b/ex-gateway/src/main/resources/application.properties
@@ -18,7 +18,7 @@ zuul.routes.kafkaproducer.path=/ex-kafka-producer/**
 
 zuul.routes.oauth.service-id=ex-oauth
 zuul.routes.oauth.path=/ex-oauth/**
-#zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
+zuul.routes.oauth.sensitive-headers=Cookie,Set-Cookie
 
 zuul.routes.budget.service-id=ex-budget
 zuul.routes.budget.path=/ex-budget/**
